<resources>
    <string name="app_name">Brisa Chips</string>
    <string name="title_activity_login">Brisa Chip</string>
    <string name="app_entrar">Entrar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_lateral_home">Home</string>
    <string name="title_activity_menu_lateral_regiao">Região</string>
    <string name="pe_a_j_seu_chip">Peça já seu chip</string>
    <string name="escolha_a_quantidade">Escolha a quantidade</string>
    <string name="cancelar">Cancelar</string>
    <string name="pedir">Pedir</string>
    <string name="pedido">PEDIDO</string>
    <string name="data">DATA</string>
    <string name="quantidade">QUANTIDADE</string>
    <string name="status">STATUS</string>

</resources>
