<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borda_redonda">


    <TextView
        android:id="@+id/peca_chip_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pe_a_j_seu_chip"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_a_quantidade"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/quantidade_item_alert"
        android:inputType="number"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:lineSpacingExtra="20sp"
        android:layout_gravity="center"
        android:hint="Quantidade"
        android:textColor="@color/cinzaAppPadrao"
        android:theme="@style/EditTextLogin"
        android:layout_marginTop="8dp"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:lines="1"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/containerButton_home_info_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:foregroundGravity="fill"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/entrarLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/mybutton"
                android:backgroundTint="@color/cancelar"
                android:text="@string/cancelar"
                android:textColor="@color/branco"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerButton_home_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/containerButton_home_info_dialog"
            android:foregroundGravity="fill"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/entrarLogin_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/mybutton"
                android:backgroundTint="@color/logo"
                android:text="@string/pedir"
                android:textColor="@color/branco" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>