<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmants.Home.HomeFragment">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/containerText_home_info_header"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:background="@color/colorAccent">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/item_pedido_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedido"
                android:textAllCaps="true"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/item_data_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/data"
                android:textAllCaps="false"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/item_qtd_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/quantidade"
                android:textAllCaps="false"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/item_status_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAllCaps="false"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:layout_marginTop="45dp"
        tools:context="com.renatodias.brisachips.Menu.MenuLateralActivity">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_menu_add"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"/>

</FrameLayout>